--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
             <version>2.17.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
